<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globe">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTag"
        android:id="@+id/btnTag"
        android:textAllCaps="false"
        android:layout_above="@+id/btnMap"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/btnMap"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/btnTotal"
        android:textAllCaps="false"
        android:layout_below="@+id/btnMap"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/txtTitle"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnTag"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal" />
</RelativeLayout>